[gd_scene load_steps=21 format=2]

[ext_resource path="res://Resources/Scripts/UIScripts/FightUI.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/DynamicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Entities/UI/Cell.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Images/GUI/02.png" type="Texture" id=4]
[ext_resource path="res://Resources/Images/GUI/Buttons/03.png" type="Texture" id=5]
[ext_resource path="res://Resources/Images/GUI/Buttons/01.png" type="Texture" id=6]
[ext_resource path="res://Resources/Images/GUI/Buttons/02.png" type="Texture" id=7]
[ext_resource path="res://Resources/Scripts/UIScripts/CustomLabel.gd" type="Script" id=8]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 25, 22, 5, 5 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2, 24, 14, 5 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 20, 14, 5 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 35, 2, 5, 14 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 23, 76, 5, 14 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 71, 20, 20 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 395, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 395, 71, 20, 20 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Resources/Fonts/Nunito_Sans/NunitoSans-Black.ttf"

[sub_resource type="DynamicFont" id=12]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 11 )

[node name="FightUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 1 )
script = ExtResource( 1 )
_UnitUI = NodePath("UnitInformation")
_ActionsCells = NodePath("BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells")
_CharPortraits = NodePath("HBoxContainer/Control/CenterContainer/HBoxContainer")
UnitUIOffset = Vector2( -10, -10 )

[node name="UnitInformation" type="Control" parent="."]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strings" type="VBoxContainer" parent="UnitInformation"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -142.0
margin_top = -92.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="UnitInformation/Strings"]
margin_right = 142.0
margin_bottom = 23.0
text = "Здоровье"

[node name="ZonePoints" type="Label" parent="UnitInformation/Strings"]
margin_top = 27.0
margin_right = 142.0
margin_bottom = 50.0

[node name="Movement" type="Label" parent="UnitInformation/Strings"]
margin_top = 54.0
margin_right = 142.0
margin_bottom = 77.0

[node name="ActionPoints" type="Label" parent="UnitInformation/Strings"]
margin_top = 81.0
margin_right = 142.0
margin_bottom = 104.0

[node name="BottomUI" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -100.0
margin_right = -26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="Control" parent="BottomUI"]
margin_right = 740.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="BottomUI/Actions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 4.5
margin_right = -1.0
margin_bottom = -4.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="TextureRect" parent="BottomUI/Actions/Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -9.0
margin_bottom = -10.0
texture = SubResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBord" type="TextureRect" parent="BottomUI/Actions/Container"]
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 20.0
margin_right = 16.0
margin_bottom = -22.0
rect_min_size = Vector2( 14, 0 )
texture = SubResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightBord" type="TextureRect" parent="BottomUI/Actions/Container"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = 20.0
margin_right = -1.0
margin_bottom = -22.0
rect_min_size = Vector2( 14, 0 )
texture = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBord" type="TextureRect" parent="BottomUI/Actions/Container"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 2.0
margin_right = -20.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 14 )
texture = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownBord" type="TextureRect" parent="BottomUI/Actions/Container"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -17.0
margin_right = -20.0
margin_bottom = -3.0
rect_min_size = Vector2( 0, 14 )
texture = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTop" type="TextureRect" parent="BottomUI/Actions/Container"]
margin_right = 21.0
margin_bottom = 22.0
texture = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftDown" type="TextureRect" parent="BottomUI/Actions/Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -22.0
margin_right = 21.0
texture = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightTop" type="TextureRect" parent="BottomUI/Actions/Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_bottom = 20.0
texture = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightDown" type="TextureRect" parent="BottomUI/Actions/Container"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -22.0
margin_bottom = -2.0
texture = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="BottomUI/Actions"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsContainer" type="CenterContainer" parent="BottomUI/Actions/ScrollContainer"]
margin_right = 740.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionsCells" type="HBoxContainer" parent="BottomUI/Actions/ScrollContainer/ActionsContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 728.0
margin_bottom = 88.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cell" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 76.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="Cell2" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 0.0
margin_right = 156.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="Cell3" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 0.0
margin_right = 236.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="Cell4" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 0.0
margin_right = 316.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="Cell5" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 320.0
margin_top = 0.0
margin_right = 396.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="Cell6" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 0.0
margin_right = 476.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="Cell7" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 480.0
margin_top = 0.0
margin_right = 556.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="Cell8" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 560.0
margin_top = 0.0
margin_right = 636.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="Cell9" parent="BottomUI/Actions/ScrollContainer/ActionsContainer/ActionsCells" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_top = 0.0
margin_right = 716.0
margin_bottom = 76.0
size_flags_horizontal = 2

[node name="EndTurnButton" type="TextureButton" parent="BottomUI"]
margin_left = 744.0
margin_top = 20.0
margin_right = 968.0
margin_bottom = 80.0
rect_min_size = Vector2( 224, 60 )
size_flags_horizontal = 8
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomLabel" type="Label" parent="BottomUI/EndTurnButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 14.0
margin_right = -27.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 12 )
text = "Следующий ход"
align = 1
valign = 1
uppercase = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
type = 1

[node name="NextTurnButton" type="Control" parent="BottomUI"]
visible = false
margin_left = 600.0
margin_right = 968.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
anchor_right = 1.0
rect_min_size = Vector2( 0, 125 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 1024.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Control/CenterContainer"]
margin_left = 512.0
margin_top = 62.0
margin_right = 512.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BottomUI/EndTurnButton" to="." method="NextTurn"]
